[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/leaderBoard.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="HBoxContainer"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0

[node name="Label4" type="Label" parent="HBoxContainer"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0

[node name="Label5" type="Label" parent="HBoxContainer"]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 86.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 23.1634
margin_top = 219.161
margin_right = 35.1634
margin_bottom = 239.161
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Button" to="." method="onLoadButtonPressed"]
